--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,7 +1,7 @@
 
 
 .side-navigation-panel {
-    @apply outline-none text-white;
+    @apply outline-none text-black;
     font-weight: bold;
     
     *,
