--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
   background: #f2f2f2;
   color: black;
 }
@@ -10,5 +10,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Aclonica', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
 }
