--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 // Your variable overrides
-$body-bg: #000;
-$body-color: #111;
+// $body-bg: #000;
+// $body-color: #111;
 
 // Bootstrap and its default variables
 @import "@fortawesome/fontawesome-svg-core/styles.css";
