--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,3 +22,13 @@ h6 {
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 700;
 }
+
+
+.card {
+  box-shadow: 0px 0px 11px 2px #e7e7e7;
+  border: 1px solid #e9e9e9;
+}
+
+.card-header {
+  background: transparent;
+}
