--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,8 @@ $body-color: #fff;
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+@import './ecosystem-animation.scss';
+
 body {
   font-family: 'Barlow Condensed', sans-serif;
   color: black;
@@ -25,7 +27,7 @@ h6 {
 
 
 .card {
-  box-shadow: 0px 0px 11px 2px #e7e7e7;
+  box-shadow: 0 0 11px 2px #e7e7e7;
   border: 1px solid #e9e9e9;
 }
 
